--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "@ionic-native/core": "3.12.1",
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/status-bar": "3.12.1",
-    "@ionic/storage": "2.0.1",
+    "@ionic/storage": "^2.0.1",
     "angularfire2": "^4.0.0-rc.2",
     "cordova-plugin-camera": "^2.4.1",
     "cordova-plugin-ionic": "^1.1.8",
+    "cordova-sqlite-storage": "^2.0.4",
     "firebase": "^4.3.1",
     "ionic-angular": "3.6.1",
     "ionicons": "3.0.0",
@@ -47,7 +48,8 @@
         "CHANNEL_NAME": "Master",
         "UPDATE_METHOD": "background"
       },
-      "cordova-plugin-camera": {}
+      "cordova-plugin-camera": {},
+      "cordova-sqlite-storage": {}
     }
   }
 }
