--- a/package.json
+++ b/package.json
@@ -1,88 +1,92 @@
 {
-  "name": "project",
-  "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
-  "private": true,
-  "scripts": {
-    "clean": "ionic-app-scripts clean",
-    "build": "ionic-app-scripts build",
-    "lint": "ionic-app-scripts lint",
-    "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve"
-  },
-  "dependencies": {
-    "@angular/common": "4.1.3",
-    "@angular/compiler": "4.1.3",
-    "@angular/compiler-cli": "4.1.3",
-    "@angular/core": "4.1.3",
-    "@angular/forms": "4.1.3",
-    "@angular/http": "4.1.3",
-    "@angular/platform-browser": "4.1.3",
-    "@angular/platform-browser-dynamic": "4.1.3",
-    "@ionic-native/camera": "^4.2.1",
-    "@ionic-native/core": "3.12.1",
-    "@ionic-native/file": "^4.3.2",
-    "@ionic-native/file-path": "^4.3.2",
-    "@ionic-native/geolocation": "^4.3.2",
-    "@ionic-native/splash-screen": "3.12.1",
-    "@ionic-native/sqlite": "^4.3.2",
-    "@ionic-native/status-bar": "3.12.1",
-    "@ionic-native/transfer": "^3.14.0",
-    "@ionic/storage": "^2.0.1",
-    "angularfire2": "^4.0.0-rc.2",
-    "cordova-android": "^6.2.3",
-    "cordova-plugin-add-swift-support": "^1.7.0",
-    "cordova-plugin-camera": "^2.4.1",
-    "cordova-plugin-compat": "^1.2.0",
-    "cordova-plugin-console": "^1.0.5",
-    "cordova-plugin-device": "^1.1.4",
-    "cordova-plugin-file": "^4.3.3",
-    "cordova-plugin-file-transfer": "^1.6.3",
-    "cordova-plugin-filepath": "^1.1.0",
-    "cordova-plugin-geolocation": "^2.4.3",
-    "cordova-plugin-ionic": "^1.1.8",
-    "cordova-plugin-splashscreen": "^4.0.3",
-    "cordova-plugin-statusbar": "^2.2.2",
-    "cordova-plugin-whitelist": "^1.3.1",
-    "cordova-sqlite-storage": "^2.0.4",
-    "firebase": "^4.3.1",
-    "ionic-angular": "3.6.1",
-    "ionic-plugin-keyboard": "^2.2.1",
-    "ionicons": "3.0.0",
-    "rxjs": "5.4.0",
-    "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.12"
-  },
-  "devDependencies": {
-    "@ionic/app-scripts": "2.1.4",
-    "typescript": "2.3.4"
-  },
-  "description": "An Ionic project",
-  "cordova": {
-    "plugins": {
-      "cordova-plugin-ionic": {
-        "APP_ID": "805beff5",
-        "CHANNEL_NAME": "Master",
-        "UPDATE_METHOD": "background"
-      },
-      "cordova-plugin-camera": {},
-      "cordova-sqlite-storage": {},
-      "cordova-plugin-file": {},
-      "cordova-plugin-file-transfer": {},
-      "cordova-plugin-filepath": {},
-      "cordova-plugin-console": {},
-      "cordova-plugin-device": {},
-      "cordova-plugin-splashscreen": {},
-      "cordova-plugin-statusbar": {},
-      "cordova-plugin-whitelist": {},
-      "ionic-plugin-keyboard": {},
-      "cordova-plugin-geolocation": {
-        "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
-      }
+    "name": "project",
+    "version": "0.0.1",
+    "author": "Ionic Framework",
+    "homepage": "http://ionicframework.com/",
+    "private": true,
+    "scripts": {
+        "clean": "ionic-app-scripts clean",
+        "build": "ionic-app-scripts build",
+        "lint": "ionic-app-scripts lint",
+        "ionic:build": "ionic-app-scripts build",
+        "ionic:serve": "ionic-app-scripts serve"
     },
-    "platforms": [
-      "android"
-    ]
-  }
+    "dependencies": {
+        "@angular/common": "4.1.3",
+        "@angular/compiler": "4.1.3",
+        "@angular/compiler-cli": "4.1.3",
+        "@angular/core": "4.1.3",
+        "@angular/forms": "4.1.3",
+        "@angular/http": "4.1.3",
+        "@angular/platform-browser": "4.1.3",
+        "@angular/platform-browser-dynamic": "4.1.3",
+        "@ionic-native/camera": "^4.2.1",
+        "@ionic-native/core": "3.12.1",
+        "@ionic-native/file": "^4.3.2",
+        "@ionic-native/file-path": "^4.3.2",
+        "@ionic-native/geolocation": "^4.3.2",
+        "@ionic-native/splash-screen": "3.12.1",
+        "@ionic-native/sqlite": "^4.3.2",
+        "@ionic-native/sqlite-porter": "^4.3.2",
+        "@ionic-native/status-bar": "3.12.1",
+        "@ionic-native/transfer": "^3.14.0",
+        "@ionic/storage": "^2.0.1",
+        "angularfire2": "^4.0.0-rc.2",
+        "cordova-android": "^6.2.3",
+        "cordova-plugin-add-swift-support": "^1.7.0",
+        "cordova-plugin-camera": "^2.4.1",
+        "cordova-plugin-compat": "^1.2.0",
+        "cordova-plugin-console": "^1.0.5",
+        "cordova-plugin-device": "^1.1.4",
+        "cordova-plugin-file": "^4.3.3",
+        "cordova-plugin-file-transfer": "^1.6.3",
+        "cordova-plugin-filepath": "^1.1.0",
+        "cordova-plugin-geolocation": "^2.4.3",
+        "cordova-plugin-ionic": "^1.1.8",
+        "cordova-plugin-splashscreen": "^4.0.3",
+        "cordova-plugin-statusbar": "^2.2.2",
+        "cordova-plugin-whitelist": "^1.3.1",
+        "cordova-sqlite-storage": "^2.0.4",
+        "firebase": "^4.3.1",
+        "ionic-angular": "3.6.1",
+        "ionic-plugin-keyboard": "^2.2.1",
+        "ionicons": "3.0.0",
+        "moment": "^2.19.1",
+        "rxjs": "5.4.0",
+        "sw-toolbox": "3.6.0",
+        "uk.co.workingedge.cordova.plugin.sqliteporter": "^1.0.2",
+        "zone.js": "0.8.12"
+    },
+    "devDependencies": {
+        "@ionic/app-scripts": "2.1.4",
+        "typescript": "2.3.4"
+    },
+    "description": "An Ionic project",
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-ionic": {
+                "APP_ID": "805beff5",
+                "CHANNEL_NAME": "Master",
+                "UPDATE_METHOD": "background"
+            },
+            "cordova-plugin-camera": {},
+            "cordova-sqlite-storage": {},
+            "cordova-plugin-file": {},
+            "cordova-plugin-file-transfer": {},
+            "cordova-plugin-filepath": {},
+            "cordova-plugin-console": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-whitelist": {},
+            "ionic-plugin-keyboard": {},
+            "cordova-plugin-geolocation": {
+                "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
+            },
+            "uk.co.workingedge.cordova.plugin.sqliteporter": {}
+        },
+        "platforms": [
+            "android"
+        ]
+    }
 }
